# human_pose_estimation_openvino

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: node.hpp
launch/: human_pose.launch
msg/: HumanPoseArray.msg
src/: node.cpp
