<package format="2">
  <name>human_pose_estimation_NCS2</name>
  <description>
    Package to detect human poses using the intel neural compute stick 2.
  </description>

  <version>0.0.1</version>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>humanoid_league_speaker</depend>
  <depend>message_runtime</depend>
  <depend>cv_bridge</depend>

</package>
